namespace Wms.Models.Data.Bookstore
{
    public class Category
    {
        public string? Id { get; set; }

        public string Name { get; set; } = string.Empty;
    }
}
